21-cluster-tools/pingdatagovernance-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  labels:
    role: pingdatagovernance
  name: pingdatagovernace-ingress
spec:
  rules:
  - host: pingdatagovernance-devops-eks-samirgandhi.ping-devops.com
    http:
      paths:
      - backend:
          serviceName: pingdatagovernance
          servicePort: 443
        path: /
  tls:
  - hosts:
    - pingdatagovernance-devops-eks-samirgandhi.ping-devops.com
    secretName: tls-secret
